# snotel_lib

./: .gitignore  .pre-commit-config.yaml  DATA_SOURCE_MIGRATION.md  README.md  pyproject.toml
notebooks/: snotel_demo.ipynb  snotel_demo_metloom.ipynb  snotel_leaderboard.ipynb  snotel_metadata_fun_facts.ipynb
src/snotel_lib/: __init__.py  clean_cache_dir.py  client.py  config.py  constants.py  schemas.py  utils.py
src/snotel_lib/calculation/: __init__.py  anomaly.py  consistency.py  core.py  trends.py
src/snotel_lib/clean/: __init__.py  checks.py  models.py  runner.py
src/snotel_lib/clients/: __init__.py  base.py  egagli_client.py  metloom_client.py
src/snotel_lib/io/: __init__.py  core.py
src/snotel_lib/schemas/: __init__.py  converters.py  models.py
src/snotel_lib/validation/: checks.py  models.py  runner.py
tests/: conftest.py  test_client.py  test_io.py  test_qc.py  test_utils.py
tests/calculation/: test_anomaly.py  test_consistency.py  test_core.py  test_trends.py  test_units.py
tests/clients/: test_egagli_client.py  test_metloom_client.py
tests/io/: test_io.py
tests/validation/: test_qc.py
